--- a/src/Steeltoe.Tooling/Steeltoe.Tooling.csproj
+++ b/src/Steeltoe.Tooling/Steeltoe.Tooling.csproj
@@ -1,14 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ToolCommandName>steeltoe</ToolCommandName>
     <PackAsTool>True</PackAsTool>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
+    <PackageReference Include="YamlDotNet" Version="5.0.1" />
   </ItemGroup>
-
 </Project>
