--- a/src/Steeltoe.Tooling.CloudFoundry/Steeltoe.Tooling.CloudFoundry.csproj
+++ b/src/Steeltoe.Tooling.CloudFoundry/Steeltoe.Tooling.CloudFoundry.csproj
@@ -1,8 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <Import Project="..\..\versions.props" />
+
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="YamlDotNet" Version="5.0.1" />
+    <PackageReference Include="YamlDotNet" Version="$(YamlDotNetVersion)" />
   </ItemGroup>
+
 </Project>
