--- a/src/Steeltoe.Tooling.DotnetCLI.Doctor/Steeltoe.Tooling.DotnetCLI.Doctor.csproj
+++ b/src/Steeltoe.Tooling.DotnetCLI.Doctor/Steeltoe.Tooling.DotnetCLI.Doctor.csproj
@@ -1,8 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <Import Project="..\..\versions.props" />
+
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="$(McMasterExtensionsCommandLineUtils)" />
   </ItemGroup>
+
 </Project>
