--- a/src/Steeltoe.Tooling.DotnetCLI.Target/Steeltoe.Tooling.DotnetCLI.Target.csproj
+++ b/src/Steeltoe.Tooling.DotnetCLI.Target/Steeltoe.Tooling.DotnetCLI.Target.csproj
@@ -1,12 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <Import Project="..\..\versions.props" />
+
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="$(McMasterExtensionsCommandLineUtils)" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Steeltoe.Tooling.CloudFoundry\Steeltoe.Tooling.CloudFoundry.csproj" />
     <ProjectReference Include="..\Steeltoe.Tooling.DotnetCLI.Base\Steeltoe.Tooling.DotnetCLI.Base.csproj" />
   </ItemGroup>
+
 </Project>
