--- a/src/Steeltoe.Tooling.System/Steeltoe.Tooling.System.csproj
+++ b/src/Steeltoe.Tooling.System/Steeltoe.Tooling.System.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-    </PropertyGroup>
+  <Import Project="..\..\versions.props" />
+
+  <PropertyGroup>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+  </PropertyGroup>
 
 </Project>
