Begins implementation of service life cycle

--- a/feature/Steeltoe.Tooling.DotnetCLI.Doctor.Feature/Steeltoe.Tooling.DotnetCLI.Doctor.Feature.csproj
+++ b/feature/Steeltoe.Tooling.DotnetCLI.Doctor.Feature/Steeltoe.Tooling.DotnetCLI.Doctor.Feature.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitStudioVersion)" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="$(XunitVersion)" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Steeltoe.Tooling.DotnetCLI.Base.Feature\Steeltoe.Tooling.DotnetCLI.Base.Feature.csproj" />
+  </ItemGroup>
 </Project>
