--- a/feature/Steeltoe.Tooling.DotnetCLI.Target.Feature/Steeltoe.Tooling.DotnetCLI.Target.Feature.csproj
+++ b/feature/Steeltoe.Tooling.DotnetCLI.Target.Feature/Steeltoe.Tooling.DotnetCLI.Target.Feature.csproj
@@ -1,12 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <Import Project="..\..\versions.props" />
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="LightBDD.XUnit2" Version="$(LightBDDXUnit2Version)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
@@ -15,5 +12,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitStudioVersion)" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="$(XunitVersion)" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Steeltoe.Tooling.DotnetCLI.Base.Feature\Steeltoe.Tooling.DotnetCLI.Base.Feature.csproj" />
+  </ItemGroup>
 </Project>
