--- a/test/Steeltoe.Tooling.System.Test/Steeltoe.Tooling.System.Test.csproj
+++ b/test/Steeltoe.Tooling.System.Test/Steeltoe.Tooling.System.Test.csproj
@@ -1,22 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <Import Project="..\..\versions.props" />
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
     <PackageReference Include="Shouldly" Version="3.0.0" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitStudioVersion)" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="$(XunitVersion)" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\src\Steeltoe.Tooling.System\Steeltoe.Tooling.System.csproj" />
+    <ProjectReference Include="..\Steeltoe.Tooling.Base.Test\Steeltoe.Tooling.Base.Test.csproj" />
   </ItemGroup>
-
 </Project>
