--- a/feature/Steeltoe.Tooling.DotnetCli.Service.Feature/Steeltoe.Tooling.DotnetCli.Service.Feature.csproj
+++ b/feature/Steeltoe.Tooling.DotnetCli.Service.Feature/Steeltoe.Tooling.DotnetCli.Service.Feature.csproj
@@ -13,7 +13,6 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="$(XunitVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Steeltoe.Tooling.DotnetCLI\Steeltoe.Tooling.DotnetCLI.csproj" />
-    <ProjectReference Include="..\..\src\Steeltoe.Tooling.System\Steeltoe.Tooling.System.csproj" />
+    <ProjectReference Include="..\Steeltoe.Tooling.DotnetCli.Base.Feature\Steeltoe.Tooling.DotnetCli.Base.Feature.csproj" />
   </ItemGroup>
 </Project>
