--- a/src/Steeltoe.Tooling.DotnetCli.Service/Steeltoe.Tooling.DotnetCli.Service.csproj
+++ b/src/Steeltoe.Tooling.DotnetCli.Service/Steeltoe.Tooling.DotnetCli.Service.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Steeltoe.Tooling.DotnetCLI.Base\Steeltoe.Tooling.DotnetCLI.Base.csproj" />
+    <ProjectReference Include="..\Steeltoe.Tooling.DotnetCli.Base\Steeltoe.Tooling.DotnetCli.Base.csproj" />
   </ItemGroup>
 
 </Project>
