Updates Travis configuration for prototype

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ os:
   - osx
 branches:
   only:
-    - master
+    - prototype
 script:
   - dotnet --info
   - dotnet build
-  - dotnet test test/Steeltoe.Tooling.Test
+  - scripts/unit-test
   - dotnet pack
