Provides a logging toehold

--- a/src/Steeltoe.Tooling.DotnetCli.Base/Steeltoe.Tooling.DotnetCli.Base.csproj
+++ b/src/Steeltoe.Tooling.DotnetCli.Base/Steeltoe.Tooling.DotnetCli.Base.csproj
@@ -1,13 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <Import Project="..\..\versions.props" />
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="$(McMasterExtensionsCommandLineUtils)" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
   </ItemGroup>
-
 </Project>
