--- a/config/versions.props
+++ b/config/versions.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
     <McMasterExtensionsCommandLineUtils>2.2.5</McMasterExtensionsCommandLineUtils>
+    <MicrosoftExtensionsLoggingVersion>2.1.1</MicrosoftExtensionsLoggingVersion>
     <ShouldlyVersion>3.0.0</ShouldlyVersion>
     <TestSdkVersion>15.7.2</TestSdkVersion>
     <XunitVersion>2.3.1</XunitVersion>
