--- a/src/Steeltoe.Tooling.System/Steeltoe.Tooling.System.csproj
+++ b/src/Steeltoe.Tooling.System/Steeltoe.Tooling.System.csproj
@@ -4,6 +4,6 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)" />
   </ItemGroup>
 </Project>
