--- a/src/Steeltoe.Tooling.Base/Steeltoe.Tooling.Base.csproj
+++ b/src/Steeltoe.Tooling.Base/Steeltoe.Tooling.Base.csproj
@@ -5,8 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Steeltoe.Tooling.Base\Steeltoe.Tooling.Base.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="$(MicrosoftExtensionsLoggingVersion)" />
   </ItemGroup>
 </Project>
