Utilizes Shouldly version from config file

--- a/test/Steeltoe.Tooling.CloudFoundry.Test/Steeltoe.Tooling.CloudFoundry.Test.csproj
+++ b/test/Steeltoe.Tooling.CloudFoundry.Test/Steeltoe.Tooling.CloudFoundry.Test.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
-    <PackageReference Include="Shouldly" Version="3.0.0" />
+    <PackageReference Include="Shouldly" Version="$(ShouldlyVersion)" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitStudioVersion)" />
   </ItemGroup>
