--- a/test/Steeltoe.Tooling.Base.Test/Steeltoe.Tooling.Base.Test.csproj
+++ b/test/Steeltoe.Tooling.Base.Test/Steeltoe.Tooling.Base.Test.csproj
@@ -6,10 +6,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="$(MicrosoftExtensionsLoggingVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
     <PackageReference Include="Shouldly" Version="$(ShouldlyVersion)" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitStudioVersion)" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Steeltoe.Tooling.Base\Steeltoe.Tooling.Base.csproj" />
   </ItemGroup>
 </Project>
