--- a/test/Steeltoe.Tooling.System.Test/Steeltoe.Tooling.System.Test.csproj
+++ b/test/Steeltoe.Tooling.System.Test/Steeltoe.Tooling.System.Test.csproj
@@ -12,6 +12,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Steeltoe.Tooling.System\Steeltoe.Tooling.System.csproj" />
-    <ProjectReference Include="..\Steeltoe.Tooling.Base.Test\Steeltoe.Tooling.Base.Test.csproj" />
+    <ProjectReference Include="..\Steeltoe.Tooling.Test.Base\Steeltoe.Tooling.Test.Base.csproj" />
   </ItemGroup>
 </Project>
