--- a/test/Steeltoe.Tooling.Test.Base/Steeltoe.Tooling.Test.Base.csproj
+++ b/test/Steeltoe.Tooling.Test.Base/Steeltoe.Tooling.Test.Base.csproj
@@ -2,10 +2,10 @@
   <Import Project="..\..\versions.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="$(MicrosoftExtensionsLoggingVersion)" />
-    <PackageReference Include="YamlDotNet" Version="$(YamlDotNetVersion)" />
   </ItemGroup>
 </Project>
