--- a/test/Steeltoe.Tooling.DotnetCli.Test/Steeltoe.Tooling.DotnetCli.Test.csproj
+++ b/test/Steeltoe.Tooling.DotnetCli.Test/Steeltoe.Tooling.DotnetCli.Test.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\versions.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
