Fixes missing package import for unit test

--- a/test/Steeltoe.Tooling.DotnetCli.Test/Steeltoe.Tooling.DotnetCli.Test.csproj
+++ b/test/Steeltoe.Tooling.DotnetCli.Test/Steeltoe.Tooling.DotnetCli.Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitStudioVersion)" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="$(XunitVersion)" />
+    <PackageReference Include="YamlDotNet" Version="$(YamlDotNetVersion)" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Steeltoe.Tooling.DotnetCli\Steeltoe.Tooling.DotnetCli.csproj" />
