Converts Steeltoe.Tooling.System tests to BDD style

--- a/test/Steeltoe.Tooling.System.Test/Steeltoe.Tooling.System.Test.csproj
+++ b/test/Steeltoe.Tooling.System.Test/Steeltoe.Tooling.System.Test.csproj
@@ -5,10 +5,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="LightBDD.XUnit2" Version="$(LightBDDXUnit2Version)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
     <PackageReference Include="Shouldly" Version="$(ShouldlyVersion)" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitStudioVersion)" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="$(XunitVersion)" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Steeltoe.Tooling.System\Steeltoe.Tooling.System.csproj" />
