--- a/test/Steeltoe.Tooling.DotnetCli.Test/Steeltoe.Tooling.DotnetCli.Test.csproj
+++ b/test/Steeltoe.Tooling.DotnetCli.Test/Steeltoe.Tooling.DotnetCli.Test.csproj
@@ -5,6 +5,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="LightBDD.XUnit2" Version="$(LightBDDXUnit2Version)" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="$(MicrosoftExtensionsLoggingVersion)" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
