Reorgs commands and executors

--- a/src/Steeltoe.Tooling.DotnetCli/Steeltoe.Tooling.DotnetCli.csproj
+++ b/src/Steeltoe.Tooling.DotnetCli/Steeltoe.Tooling.DotnetCli.csproj
@@ -14,4 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Steeltoe.Tooling\Steeltoe.Tooling.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Executors" />
+  </ItemGroup>
 </Project>
