--- a/src/Steeltoe.Tooling.System/Steeltoe.Tooling.System.csproj
+++ b/src/Steeltoe.Tooling.System/Steeltoe.Tooling.System.csproj
@@ -2,6 +2,7 @@
   <Import Project="..\..\versions.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)" />
