--- a/src/Steeltoe.Tooling.Cli/Steeltoe.Tooling.Cli.csproj
+++ b/src/Steeltoe.Tooling.Cli/Steeltoe.Tooling.Cli.csproj
@@ -9,12 +9,7 @@
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="$(McMasterExtensionsCommandLineUtilsVersion)" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftExtensionsLoggingVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="$(MicrosoftExtensionsLoggingVersion)" />
     <PackageReference Include="YamlDotNet" Version="$(YamlDotNetVersion)" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Steeltoe.Tooling\Steeltoe.Tooling.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Executors" />
   </ItemGroup>
 </Project>
