Implements initial unit tests for add-service command

--- a/src/Steeltoe.Tooling.Cli/Steeltoe.Tooling.Cli.csproj
+++ b/src/Steeltoe.Tooling.Cli/Steeltoe.Tooling.Cli.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="$(MicrosoftExtensionsLoggingVersion)" />
     <PackageReference Include="YamlDotNet" Version="$(YamlDotNetVersion)" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Executors\Service" />
+    <Folder Include="Executors\Target" />
+  </ItemGroup>
 </Project>
