Implements initial unit tests for check-service command

--- a/feature/Steeltoe.Tooling.Cli.Feature/Steeltoe.Tooling.Cli.Feature.csproj
+++ b/feature/Steeltoe.Tooling.Cli.Feature/Steeltoe.Tooling.Cli.Feature.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Steeltoe.Tooling.Cli\Steeltoe.Tooling.Cli.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands" />
+  </ItemGroup>
 </Project>
