--- a/test/Steeltoe.Tooling.Cli.Test/Steeltoe.Tooling.Cli.Test.csproj
+++ b/test/Steeltoe.Tooling.Cli.Test/Steeltoe.Tooling.Cli.Test.csproj
@@ -19,6 +19,8 @@
     <ProjectReference Include="..\..\src\Steeltoe.Tooling.Cli\Steeltoe.Tooling.Cli.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Executors\Service" />
     <Folder Include="Executors\Target" />
+    <Folder Include="System" />
   </ItemGroup>
 </Project>
