--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,10 +2,10 @@ version: '1.0.0-{branch}-{build}'
 init:
   - git config --global core.autocrlf true
 image:
-  - Visual Studio 2017    
+  - Visual Studio 2017
 branches:
   only:
-    - prototype
+    - dev
 install:
   - ps: dotnet --info
 test_script:
