--- a/src/Steeltoe.Tooling.Library/Steeltoe.Tooling.Library.csproj
+++ b/src/Steeltoe.Tooling.Library/Steeltoe.Tooling.Library.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\versions.props" />
+  <Import Project="..\..\config\versions.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
