Sets version to 0.0.1 and enables NuGet publishing

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-version: '1.0.0-{branch}-{build}'
+version: '0.0.1-{branch}-{build}'
 init:
   - git config --global core.autocrlf true
 image:
@@ -6,12 +6,26 @@ image:
 branches:
   only:
     - dev
+    - springone-2018
 install:
   - ps: dotnet --info
 test_script:
   - ps: scripts\unit-test
 build_script:
   - ps: dotnet pack
+artifacts:
+  - path: '**\*.nupkg'
 environment:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
+deploy:
+- provider: NuGet
+  skip_symbols: false
+  artifact: /.*\.nupkg/
+  server: https://www.myget.org/F/steeltoedev/api/v2/package
+  symbol_server: https://www.myget.org/F/steeltoedev/symbols/api/v2/package
+  api_key:
+    secure: 246ApObnMYYvzDo9Ki72CxxuKfuoqYbrbUK2HLevGIGHXYY6f0OkAdE3EWCwNJ7g
+  on:
+    branch: springone-2018
+    appveyor_repo_tag: false
