[Closes #35] Renames command "steeltoe" to "st"

--- a/src/Steeltoe.Cli/Steeltoe.Cli.csproj
+++ b/src/Steeltoe.Cli/Steeltoe.Cli.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\config\versions.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <ToolCommandName>steeltoe</ToolCommandName>
+    <ToolCommandName>st</ToolCommandName>
     <PackAsTool>true</PackAsTool>
     <OutputType>exe</OutputType>
   </PropertyGroup>
