Adds support for Cloud Foundry redis-server

--- a/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
+++ b/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
@@ -42,6 +42,9 @@ environments:
       config-server:
         service: p-config-server
         plan: standard
+      redis-server:
+        service: p-redis
+        plan: shared-vm
       service-registry:
         service: p-service-registry
         plan: standard
