--- a/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
+++ b/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
@@ -25,6 +25,9 @@ serviceTypes:
   mssql:
     description: Microsoft SQL Server
     port: 1433
+  mysql:
+    description: MySQL Server
+    port: 3306
   redis:
     description: Redis In-Memory Datastore
     port: 6379
@@ -48,6 +51,9 @@ targets:
       hystrix-dashboard:
         service: p-circuit-breaker-dashboard
         plan: standard
+      mysql:
+        service: p-mysql
+        plan: 100mb
       redis:
         service: p-redis
         plan: shared-vm
@@ -66,6 +72,8 @@ targets:
       mssql:
         image-linux: steeltoeoss/mssql:2017-CU11-linux
         image-windows: steeltoeoss/mssql:2017-CU1-windows
+      mysql:
+        image: steeltoeoss/mysql:5.7.24
       redis:
         image-linux: steeltoeoss/redis:4.0.11-linux
         image-windows: steeltoeoss/redis:3.0.504-windows
