[Closes #45] Adds support for deploying apps on Docker

--- a/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
+++ b/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
@@ -59,6 +59,8 @@ targets:
         plan: shared-vm
   docker:
     description: Docker
+    properties:
+      dotnetRuntimeImage: steeltoeoss/dotnet-runtime:2.1
     serviceTypeProperties:
       dummy-svc:
         image: dummy-server:0.1
