--- a/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
+++ b/src/Steeltoe.Tooling/steeltoe.rc/registry.yml
@@ -77,7 +77,7 @@ targets:
       mysql:
         image: steeltoeoss/mysql:5.7.24
       redis:
-        image-linux: steeltoeoss/redis:4.0.11-linux
-        image-windows: steeltoeoss/redis:3.0.504-windows
+        image-linux: steeltoeoss/redis-amd64-linux:4.0.11
+        image-windows: steeltoeoss/redis-amd64-windows:3.0.504
       zipkin:
         image: steeltoeoss/zipkin:2.11.6
