--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,6 +6,7 @@ image:
 branches:
   only:
     - dev
+    - update-m1
 install:
   - ps: dotnet --info
   - git clone https://github.com/SteeltoeOSS/steeltoe-ci.git -v
