Add large Steeltoe logo

--- a/visual-studio-templates/win-framework-base/Win-Framework-Base-VSIX/Win-Framework-Base-VSIX.csproj
+++ b/visual-studio-templates/win-framework-base/Win-Framework-Base-VSIX/Win-Framework-Base-VSIX.csproj
@@ -56,6 +56,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\SteeltoeLogo-128x128.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\SteeltoeLogo-32x32.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
