--- a/visual-studio-templates/win-core-cloudfoundry/Win-Core-CloudFoundry-VSIX/Win-Core-CloudFoundry-VSIX.csproj
+++ b/visual-studio-templates/win-core-cloudfoundry/Win-Core-CloudFoundry-VSIX/Win-Core-CloudFoundry-VSIX.csproj
@@ -52,11 +52,19 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\CloudFoundryLogo-128x128.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\CloudFoundryLogo-32x32.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Resources\LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Resources\SteeltoeLogo-128x128.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
