--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,3 +32,13 @@ deploy:
   on:
     branch: dev
     appveyor_repo_tag: false
+- provider: NuGet
+  skip_symbols: false
+  artifact: /.*\.nupkg/
+  server: https://www.myget.org/F/steeltoemaster/api/v2/package
+  symbol_server: https://www.myget.org/F/steeltoemaster/symbols/api/v2/package
+  api_key:
+    secure: 246ApObnMYYvzDo9Ki72CxxuKfuoqYbrbUK2HLevGIGHXYY6f0OkAdE3EWCwNJ7g
+  on:
+    branch: master
+    appveyor_repo_tag: false
